--- a/source/app/components/login/login.html
+++ b/source/app/components/login/login.html
@@ -1,52 +1,69 @@
 <style type="text/css">
-/*body {
-    background-image: url('img/login_bg.jpg')
-}*/
+.panel-heading {
+    padding: 5px 15px;
+}
+
+.panel-footer {
+    padding: 1px 15px;
+    color: #A0A0A0;
+}
+
+.profile-img {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
 </style>
-<div class="col-md-8 clear-padding-left">
-    <img class="img-bg" src="assets/img/login_bg.jpg">
-</div>
-</div>
-<div class="col-md-4 custom-login">
-    <div class="form-login">
-        <form class="form-horizontal" role="form">
-            <div class="form-group">
-                <input id="country_selector" type="text">
-            </div>
-            <div class="form-group">
-                <img src="assets/img/logo.jpg">
-                <div class="alert alert-block alert-danger" ng-show="isFailed">
-                    <h4 class="alert-heading">Access Failed !</h4>
-                    <p>
-                        {{loginMessage}}
-                    </p>
+<div class="container" style="margin-top:40px">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-md-offset-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <strong> Sign in to continue</strong>
+                    </div>
+                    <div class="panel-body">
+                        <form role="form">
+                            <fieldset>
+                                <div class="row">
+                                    <div class="center-block">
+                                        <img class="profile-img"
+                                            src="/assets/img/photo.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-10  col-md-offset-1 ">
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <span class="input-group-addon">
+                                                    <i class="glyphicon glyphicon-user"></i>
+                                                </span> 
+                                                <input class="form-control" placeholder="Username" name="loginname" ng-model="username" type="text" autofocus>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <span class="input-group-addon">
+                                                    <i class="glyphicon glyphicon-lock"></i>
+                                                </span>
+                                                <input class="form-control" placeholder="Password" name="password" type="password" ng-model="password">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="submit" class="btn btn-lg btn-primary btn-block" ng-click="login()" value="Sign in">
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                    <div class="panel-footer ">
+                        Don't have an account! <a href="#/register"> Sign Up Here </a>
+                    </div>
                 </div>
-                <div class="alert alert-block alert-danger" ng-show="isNull">
-                    <h4 class="alert-heading">Warning !</h4>
-                    <p>
-                        {{nullMessage}}
-                    </p>
-                </div>
             </div>
-            <div class="form-group">
-                <input class="form-control" id="email" placeholder="Enter email" ng-model="username">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="password">
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Remember me
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default" ng-click="login()">Login</button>  <button type="submit" class="btn btn-default" ui-sref="register">Register</button>
-            </div>
-            <div class="form-group">
-                <a href="#">Forgot Username | Password</a>
-            </div>
-        </form>
+        </div>
     </div>
-</div>
