--- a/source/app/components/upload/upload.html
+++ b/source/app/components/upload/upload.html
@@ -1,1 +1,23 @@
-<a class="btn-upload"><img class="img-circle" src="/assets/images/upload.png" ></img></a>
+<a class="btn-upload" data-toggle="modal" data-target="#uploadModal" ><img class="img-circle" src="/assets/images/upload.png" ></img></a>
+<!-- Modal -->
+<div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel">
+	<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="uploadModalLabel">Upload image(s)</h4>
+			</div>
+			<div class="modal-body">
+            	<form enctype="multipart/form-data">
+					<div class="form-group">
+						<input id="file-1" type="file" multiple class="file" data-overwrite-initial="false" data-min-file-count="2">
+					</div>
+            	</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save changes</button>
+			</div>
+		</div>
+	</div>
+</div>
