--- a/source/app/components/gallery/gallery.html
+++ b/source/app/components/gallery/gallery.html
@@ -297,6 +297,8 @@
 								<h4>#25478921</h4>
 							 </div>
 						   </a></li>
+							 <button ng-click="detectImage()">Scan test</button>
+						   
 						   <div class="clearfix"></div>
 						</ul>
 				     </div>	
