--- a/source/app/components/gallery/gallery.html
+++ b/source/app/components/gallery/gallery.html
@@ -89,7 +89,7 @@
 						  <li><a >
 							 <img src="/web/images/pic1.jpg" class="img-responsive" alt=""/>
 						     <div class="tab_desc">
-								<p>test box</p>
+								<p>There are many variations</p>
 								<button class="btn btn-xs btn-success" data-toggle="modal" data-target="#detectModal"><i class="fa fa-tags"></i> Detect</button>
 								<!-- <h4>#25478921</h4> -->
 							 </div>
