--- a/source/app/components/gallery/gallery.html
+++ b/source/app/components/gallery/gallery.html
@@ -12,15 +12,15 @@
 	 <div class="col-md-2 stock_left">
 	   <div class="w_sidebar">
 		<section class="sky-form">
-		   <h4>Collections</h4>
+		   <h4>Album</h4>
 			 <div class="col col-4">
 				<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>All images</label>
 			 </div><div class="col col-4">
-			    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Standard</label>
-				<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Following</label>
+			    <label class="checkbox" ng-repeat="alb in listAlbum" id="{{alb.id}}"><input type="checkbox" name="checkbox"><i></i>{{alb.title}}</label>
+				<!-- <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Following</label>
 				<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Lorem Ipsum</label>
 				<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Injected humour</label>
-				<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Default model </label>
+				<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Default model </label> -->
 			</div>
 		</section>
 		<section class="sky-form">
