--- a/source/app/components/gallery/gallery.html
+++ b/source/app/components/gallery/gallery.html
@@ -74,7 +74,6 @@
 		</section>
 	   </div>
       </div>
-	 <button ng-click="detectImage()">Scan test</button>
 	  <div class="col-md-10 sap_tabs">	
 	       <div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
 			  <ul class="resp-tabs-list">
@@ -794,6 +793,23 @@
 									<input type="tags" class="form-control" id="tags">
 								</div>
 							</form>
+							<div class="windows8">
+								<div class="wBall" id="wBall_1">
+									<div class="wInnerBall"></div>
+								</div>
+								<div class="wBall" id="wBall_2">
+									<div class="wInnerBall"></div>
+								</div>
+								<div class="wBall" id="wBall_3">
+									<div class="wInnerBall"></div>
+								</div>
+								<div class="wBall" id="wBall_4">
+									<div class="wInnerBall"></div>
+								</div>
+								<div class="wBall" id="wBall_5">
+									<div class="wInnerBall"></div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
