--- a/source/app/components/gallery/gallery.html
+++ b/source/app/components/gallery/gallery.html
@@ -796,10 +796,9 @@
       {{color}}
     </ui-select-choices>
   </ui-select>
-  <hr>
 								</div>
 							</form>
-							<div class="windows8">
+							<div class="windows8" id="loadding" ng-show="showloading">
 								<div class="wBall" id="wBall_1">
 									<div class="wInnerBall"></div>
 								</div>
