--- a/source/app/components/gallery/gallery.html
+++ b/source/app/components/gallery/gallery.html
@@ -218,7 +218,7 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-danger pull-left" ng-click="removeImg()" ng-disabled="isDetecting">Remove</button>
 					<button type="button" class="btn btn-success" ng-click="detectImage()" ng-disabled="isDetecting" ><i class="fa fa-spinner fa-spin" ng-show="isDetecting"></i> {{isDetecting?'Detecting...':'Detect'}}</button>
 					<button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="updateImg()" ng-disabled="isDetecting" >Save changes</button>
 				</div>
