--- a/source/app/components/register/register.html
+++ b/source/app/components/register/register.html
@@ -1,44 +1,51 @@
-	<div class="register">
-		<div class="container">
-		   <form> 
-				 <div class="register-top-grid">
-					<h1>PERSONAL INFORMATION</h1>
-					 <div>
-						<span>First Name<label>*</label></span>
-						<input type="text"> 
-					 </div>
-					 <div>
-						<span>Last Name<label>*</label></span>
-						<input type="text"> 
-					 </div>
-					 <div>
-						 <span>Email Address<label>*</label></span>
-						 <input type="text"> 
-					 </div>
-					 <div class="clearfix"> </div>
-					   <a class="news-letter" href="#">
-						 <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i> </i>Sign Up for Newsletter</label>
-					   </a>
-					 </div>
-				     <div class="register-bottom-grid">
-						    <h4>LOGIN INFORMATION</h4>
-							 <div>
-								<span>Password<label>*</label></span>
-								<input type="text">
-							 </div>
-							 <div>
-								<span>Confirm Password<label>*</label></span>
-								<input type="text">
-							 </div>
-							 <div class="clearfix"> </div>
-					 </div>
-				</form>
-				<div class="clearfix"> </div>
-				<div class="register-but">
-				   <form>
-					   <input type="submit" value="submit">
-					   <div class="clearfix"> </div>
-				   </form>
-				</div>
-		   </div>
-	</div>
+<div class="register">
+    <div class="container">
+        <form>
+            <div class="register-top-grid">
+                <h1>LOGIN INFORMATION</h1>
+                <div>
+                    <span>Username<label>*</label></span>
+                    <input type="text" ng-model="regis.username" ng-change="check_form()">
+                </div>
+                <div>
+                    <span>Password<label>*</label></span>
+                    <input type="text" ng-model="regis.password" ng-change="check_form()">
+                </div>
+            </div>
+            <div class="register-bottom-grid">
+                <h4>PERSONAL INFORMATION</h4>
+                <div>
+                    <span>First Name<label>*</label></span>
+                    <input type="text" ng-model="regis.firstname" ng-change="check_form()">
+                </div>
+                <div>
+                    <span>Last Name<label>*</label></span>
+                    <input type="text" ng-model="regis.lastname" ng-change="check_form()">
+                </div>
+                <div>
+                    <span>Email Address<label>*</label></span>
+                    <input type="text" ng-model="regis.email" ng-change="check_form()">
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+        </form>
+        <div class="clearfix"> </div>
+        <div class="register-but">
+            <form>
+                <div class="alert alert-danger" ng-show="regis.message.username!= ''||regis.message.email != ''">
+                    <ul>
+                        <li>{{regis.message.username}}</li>
+                        <li>{{regis.message.email}}</li>
+                    </ul>
+                </div>
+                <div class="alert alert-danger" ng-show="">
+                </div>
+                <button type="submit" class="{{regis.notValid?'disabled':''}}" ng-click="submit_form()" ng-disabled="regis.notValid">SUBMIT</button>
+                <div style="margin-top:10px;">
+                    Already have an account? <a href="#/login"> Sign In Here </a>
+                </div>
+                <div class="clearfix"> </div>
+            </form>
+        </div>
+    </div>
+</div>
