--- a/source/app/components/profile/profile.html
+++ b/source/app/components/profile/profile.html
@@ -1,1 +1,19 @@
-profile.html
+<div class="container">
+  	  <h2>User profile</h2>
+  	  <div class="row">
+  	  	<label class="col-md-2">Username:</label>
+  	  	<span class="col-md-10">{{username}}</span>
+  	  </div>
+  	  <div class="row">
+  	  	<label class="col-md-2">Email:</label>
+  	  	<span class="col-md-10">{{email}}</span>
+  	  </div>
+  	  <div class="row">
+  	  	<label class="col-md-2">Firstname:</label>
+  	  	<span class="col-md-10">{{firstname}}</span>
+  	  </div>
+  	  <div class="row">
+  	  	<label class="col-md-2">Lastname:</label>
+  	  	<span class="col-md-10">{{lastname}}</span>
+  	  </div>
+  </div>
