--- a/source/app/components/upload/upload.html
+++ b/source/app/components/upload/upload.html
@@ -1,24 +1,28 @@
-<a class="btn-upload" data-toggle="modal" data-target="#uploadModal" ><img class="img-circle" src="/assets/images/upload.png" ></img></a>
+<a class="btn-upload" data-toggle="modal" data-target="#uploadModal"><img class="img-circle" src="/assets/images/upload.png"></img>
+</a>
 <!-- Modal -->
 <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="uploadModalLabel">Upload image(s)</h4>
-			</div>
-			<div class="modal-body">
-            	<form enctype="multipart/form-data">
-  <select name="singleAlbum" id="singleAlbum" ng-model="singleAlbum" ng-change="changeAlbum()">
-      <option value="">---Please select album---</option>
-      <option ng-repeat="item in listAlbum" value="{{item.id}}">{{item.title}}</option>
-    </select><br><br>
-					<div class="form-group">
-						<input id="file-1" type="file" multiple class="file" data-overwrite-initial="false" data-min-file-count="1">
-					</div>
-            	</form>
-			</div>
-		</div>
-	</div>
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="uploadModalLabel">Upload image(s)</h4>
+            </div>
+            <div class="modal-body">
+                <form enctype="multipart/form-data">
+                    <select name="singleAlbum" id="singleAlbum" ng-model="singleAlbum" ng-change="changeAlbum()">
+                        <option value="">---Please select album---</option>
+                        <option ng-repeat="item in listAlbum" value="{{item.id}}">{{item.title}}</option>
+                    </select>
+                    <input name="newalbum" ng-model="newAlbum" placeholder="Enter new album title here" />
+                    <button ng-click="insertNewAlbum()" ng-show="newAlbum!=''">Add</button>
+                    <br>
+                    <br>
+                    <div class="form-group">
+                        <input id="file-1" type="file" multiple class="file" data-overwrite-initial="false" data-min-file-count="1">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
-
